Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55035

Android 6.0.1: Bluetooth device scan does not have permissions even if set by hand

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.7.1
    • 5.7.0
    • None
    • Qt 5.7.0 for Windows 7, VS 2013
      Android 6.0.1 on Xperia Z3 Compact

    Description

      Bluetooth device scan fails on Android 6.0.1 with "java.lang.SecurityException: Need ACCESS_COARSE_LOCATION or ACCESS_FINE_LOCATION permission to get scan results" even if these permissions are set in AndroidManifest.xml by hand.
      Please have a look at the screenshot.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-55035
          # Subject Branch Project Status CR V

          Activity

            People

              ablasche Alex Blasche
              cyril4 Harald Prasser
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes